Fri Dec 06 22:54:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4 configure.in src/tds/threadsafe.c:
	- fix compile under Solaris

Fri Dec 06 17:51:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds_sysdep_private.h src/odbc/connectparams.c:
	* src/odbc/convert_sql2string.c src/tds/convert.c:
	* src/tds/login.c src/tds/read.c src/tds/threadsafe.c:
	* src/tds/util.c src/tds/write.c:
	- improve win32 compile (not include files not present)
	* src/tds/query.c src/tds/token.c:
	- do not use collapse if TDS7 is used

Thu Dec  5 12:28:37 EST 2002    JK Lowden <jklowden@schemamania.org>
        * include/tds.h src/tds/token.c fix nchar handling in tds7_get_data_info
        - allows bcp out to work with nchar datatype

Thu Dec 05 16:52:34 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* win32/msvc6/FreeTDS.def win32/msvc6/FreeTDS.dsp:
	* win32/msvc6/FreeTDS.dsw win32/msvc6/config.h:
	- files for compile ODBC driver under msvc6 (work in progress)

Wed Dec  4 16:46:53 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* TODO:
	- Remove a completed item from TODO, add a note about a known bug.

Tue Dec 03 17:50:13 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds_sysdep_private.h src/tds/convert.c:
	* src/tds/query.c src/tds/write.c:
	- simplify Win32 compile with msvc

Tue Dec 03 09:59:47 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c: remove a FIXME
	* src/tds/login.c: cleanup

Mon Dec  2 16:52:09 EST 2002    JK Lowden <jklowden@schemamania.org>
	* src/apps/freebcp.c src/apps/freebcp.h
	- add -h (hints) switch; could not test

Mon Dec 02 21:53:13 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: column_flags have now 32 bits

Mon Dec 02 14:37:04 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/server/server.c src/tds/login.c:
	* src/tds/mem.c src/tds/token.c:
	- integrated some patch from OpenLink (extend capability and 